# rs-learn

./: Cargo.toml
.github/workflows/: ci-rust.yaml
minigrep/: test_file.txt
minigrep/src/: main.rs
src/: closures.rs  colletions.rs  control_flow.rs  enums.rs  errors.rs  generic_types.rs  lib.rs  lifetimes.rs  main.rs  ownership.rs  scalar_datatypes.rs  slices.rs  structs.rs  testing.rs  traits.rs  variables.rs
tests/: integration_tests.rs
