[package]
name = "rs-learn"
version = "0.1.0"
edition = "2021"
default-run = "rs-learn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "guess_game"
path = "src/guess_game.rs"

[[bin]]
name="structs"
path = "src/structs.rs"

[[bin]]
name="enums"
path = "src/enums.rs"

[[bin]]
name="collections"
path = "src/colletions.rs"

[dependencies]
rand = "0.8.5"
